# swayipc

./: .clang-format  .gitignore  LICENCE  README.md  meson.build  usage_data.txt
examples/: get_version.c  subscribe.c
include/: events.h  socket.h  swayipc.h
source/: events.c  socket.c  swayipc.c
tests/: test_swayipc.c
